--- a/src/sass/components/about.scss
+++ b/src/sass/components/about.scss
@@ -1,3 +1,108 @@
-.about {
-  
+.container {
+  width: 1240px;
+  margin: 0 auto;
+  padding: 10px;
+}
+
+.promo {
+  padding: 40px 0 170px;
+  background-color: #000000;
+  background-image: url("../img/main-bg.jpg");
+  background-position: center center;
+  background-size: cover;
+  text-align: center;
+
+  &__title {
+    margin: 0;
+    margin-top: 190px;
+    margin-bottom: 40px;
+    padding: 0;
+    color: #ffffff;
+    font-size: 60px;
+    font-weight: 600;
+    line-height: 1.2;
+  }
+
+  &__btn {
+    display: inline-block;
+    padding: 20px 30px;
+    border: 0;
+    border-radius: 200px;
+    background-color: #7850dc;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.25);
+    color: #ffffff;
+    vertical-align: top;
+    text-decoration: none;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 24px;
+
+    img {
+      display: inline-block;
+      margin-top: -2px;
+      margin-right: 10px;
+      vertical-align: top;
+    }
+  }
+}
+
+.header {
+  text-align: left;
+}
+
+.logo {
+  float: left;
+
+  img {
+    display: block;
+  }
+}
+
+.menu {
+  float: right;
+  text-align: right;
+
+  &__list {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    font-size: 0;
+  }
+
+  &__item {
+    display: inline-block;
+    margin-right: 20px;
+    vertical-align: top;
+    font-size: 18px;
+    line-height: 18px;
+
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+
+  &__link {
+    box-sizing: border-box;
+    padding: 15px 25px;
+    color: #c8cdd2;
+    text-decoration: none;
+    font-weight: 400;
+    display: block;
+
+    &--active {
+      color: #ffffff;
+      font-weight: 600;
+    }
+
+    &--border {
+      border: 1px solid #ffffff;
+      border-radius: 100px;
+      color: #ffffff;
+      font-weight: 600;
+    }
+
+    &:hover {
+      opacity: .8;
+    }
+  }
 }
