--- a/src/sass/base/forms.scss
+++ b/src/sass/base/forms.scss
@@ -4,10 +4,18 @@ select,
 input[type="password"] {
   box-sizing: border-box;
   width: 100%;
+  height: 34px;
+  padding: 0 15px 0 35px;
   outline: none;
+  border: 1px solid #8c91a0;
+  border-radius: 100px;
+  background-color: transparent;
+  background-image: url("../img/ico-search.png");
+  background-repeat: no-repeat;
+  background-position: 10px center;
+  color: #8c91a0;
   font-family: $roboto;
-  font-size: 18px;
-  line-height: 20px;
+  font-size: 14px;
 }
 
 label {
@@ -17,42 +25,4 @@ label {
 button {
   outline: none;
   cursor: pointer;
-}
-
-
-
-.inpt-box {
-  margin: 0 auto 10px;
-}
-
-
-.inpt-box .inpt {
-    font-weight: 300;
-    overflow: hidden;
-    display: block;
-    width: 100%;
-    height: 72px;
-}
-
-.inpt-box .inpt {
-  position: relative;
-  z-index: 2;
-  padding: 0 10px;
-  border: none;
-  border-bottom: 1px solid rgba(255,255,255,.25);
-  outline: 0;
-  box-sizing: border-box;
-  font-size: 48px;
-  color: #d7d7d7;
-  transition: border-color .1s linear;
-  background: #111418;
-}
-
-textarea {
-  resize: none;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  resize: none;
-  font-size: 16px;
-  transition: height .1s linear,border-bottom-color .1s linear;
 }
