--- a/src/sass/components/about.scss
+++ b/src/sass/components/about.scss
@@ -159,5 +159,48 @@
 }
 
 .gray {
+  padding: 30px 0 110px;
   background-color: #f8f9fc;
+}
+
+.sort {
+  margin-bottom: 60px;
+
+  &__form {
+    float: right;
+    width: 160px;
+  }
+
+  &__list {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    font-size: 0;
+  }
+
+  &__item {
+    display: inline-block;
+    margin-right: 10px;
+    color: #05143c;
+    vertical-align: middle;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 1.2;
+  }
+
+  &__link {
+    display: block;
+    color: #8c91a0;
+    text-decoration: none;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 12px;
+    padding: 10px 15px;
+    border: 1px solid #8c91a0;
+    border-radius: 5px;
+
+    &:hover {
+      opacity: .8;
+    }
+  }
 }
