--- a/src/sass/components/about.scss
+++ b/src/sass/components/about.scss
@@ -159,7 +159,7 @@
 }
 
 .gray {
-  padding: 30px 0 110px;
+  padding: 30px 0 10px;
   background-color: #f8f9fc;
 }
 
@@ -201,6 +201,64 @@
 
     &:hover {
       opacity: .8;
+    }
+  }
+}
+
+.cards {
+  text-align: center;
+}
+
+.cards__container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.card {
+  width: 292px;
+  height: 152px;
+  margin-bottom: 25px;
+  position: relative;
+
+  &__date {
+    font-size: 11px;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    font-weight: 600;
+    padding: 0 5px;
+    background: rgba(0, 0, 0, 0.6);
+    color: #ffffff;
+  }
+
+  &__person {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 10px;
+    background: rgba(0, 0, 0, 0.6);
+    color: #ffffff;
+    box-sizing: border-box;
+
+    img {
+      float: left;
+      margin-right: 10px;
+      border-radius: 50%;
+    }
+  }
+
+  &__name {
+    padding: 0;
+    margin: 0;
+    font-size: 16px;
+    color: #c8cdd2;
+
+    strong {
+      display: block;
+      font-size: 18px;
+      color: #ffffff;
     }
   }
 }
