--- a/src/sass/components/about.scss
+++ b/src/sass/components/about.scss
@@ -190,17 +190,17 @@
 
   &__link {
     display: block;
+    padding: 10px 15px;
+    border: 1px solid #8c91a0;
+    border-radius: 5px;
     color: #8c91a0;
     text-decoration: none;
     font-size: 12px;
     font-weight: 400;
     line-height: 12px;
-    padding: 10px 15px;
-    border: 1px solid #8c91a0;
-    border-radius: 5px;
 
     &:hover {
-      opacity: .8;
+      opacity: 0.8;
     }
   }
 }
@@ -211,39 +211,40 @@
 
 .cards__container {
   display: flex;
+
   flex-wrap: wrap;
   justify-content: space-between;
 }
 
 .card {
+  position: relative;
+  display: block;
   width: 292px;
   height: 152px;
   margin-bottom: 25px;
-  position: relative;
-  display: block;
-  text-decoration: none;
   color: #ffffff;
+  text-decoration: none;
 
   &__date {
-    font-size: 11px;
     position: absolute;
     top: 10px;
     left: 10px;
-    font-weight: 600;
     padding: 0 5px;
     background: rgba(0, 0, 0, 0.6);
     color: #ffffff;
+    font-size: 11px;
+    font-weight: 600;
   }
 
   &__person {
     position: absolute;
+    right: 0;
     bottom: 0;
     left: 0;
-    right: 0;
+    box-sizing: border-box;
     padding: 10px;
     background: rgba(0, 0, 0, 0.6);
     color: #ffffff;
-    box-sizing: border-box;
 
     img {
       float: left;
@@ -253,15 +254,15 @@
   }
 
   &__name {
-    padding: 0;
     margin: 0;
-    font-size: 16px;
+    padding: 0;
     color: #c8cdd2;
+    font-size: 16px;
 
     strong {
       display: block;
-      font-size: 18px;
       color: #ffffff;
+      font-size: 18px;
     }
   }
 }
