--- a/src/sass/components/about.scss
+++ b/src/sass/components/about.scss
@@ -123,7 +123,7 @@
 
   &__item {
     display: inline-block;
-    margin-right: 20px;
+    margin-right: 45px;
     vertical-align: top;
     font-size: 18px;
     line-height: 18px;
@@ -142,7 +142,7 @@
   &__link {
     display: block;
     box-sizing: border-box;
-    padding: 15px 25px;
+    padding: 15px 0;
     color: #c8cdd2;
     text-decoration: none;
     font-weight: 400;
@@ -158,6 +158,7 @@
     }
 
     &--border {
+      padding: 15px 25px;
       border: 1px solid #ffffff;
       border-radius: 100px;
       color: #ffffff;
@@ -334,6 +335,7 @@
   height: 152px;
   margin-bottom: 25px;
   color: #ffffff;
+  text-align: left;
   text-decoration: none;
 
   &__date {
