--- a/src/sass/components/about.scss
+++ b/src/sass/components/about.scss
@@ -1,7 +1,8 @@
 .container {
   width: 1240px;
   margin: 0 auto;
-  padding: 10px;
+  padding: 0 20px;
+  box-sizing: border-box;
 
   @media (max-width: 1240px) {
     width: 1024px;
