Цвет текста в форме

--- a/src/sass/base/forms.scss
+++ b/src/sass/base/forms.scss
@@ -13,7 +13,7 @@ input[type="password"] {
   background-image: url("../img/ico-search.png");
   background-repeat: no-repeat;
   background-position: 10px center;
-  color: #8c91a0;
+  color: #05143c;
   font-family: $roboto;
   font-size: 14px;
 }
