--- a/src/sass/components/about.scss
+++ b/src/sass/components/about.scss
@@ -372,11 +372,13 @@
     padding: 0;
     color: #c8cdd2;
     font-size: 16px;
+    font-weight: 400;
 
     strong {
       display: block;
       color: #ffffff;
       font-size: 18px;
+      font-weight: 600;
     }
   }
 }
