--- a/src/sass/components/about.scss
+++ b/src/sass/components/about.scss
@@ -597,8 +597,10 @@
   vertical-align: top;
 
   @media (max-width: 768px) {
-    margin-right: 0;
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 25px;
+    display: block;
   }
 
   &__title {
